A11y: expose math role to ATK.

Still it is not much important as Chromium does not support MathML,
but at least this way we identify math contents as such.

Bug: 783441
Change-Id: I14b07315e07d3c8717c904dcc787bcd5d3be616f
Reviewed-on: https://chromium-review.googlesource.com/762196
Commit-Queue: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#515722}
Former-commit-id: 55ee0d08b952751e2785d70b034c2364e5a30c12