content/browser/accessibility/browser_accessibility_auralinux.cc
@@ -897,6 +897,17 @@ void BrowserAccessibilityAuraLinux::InitRoleAndState() {
     case ui::AX_ROLE_LIST_ITEM:
       atk_role_ = ATK_ROLE_LIST_ITEM;
       break;
+    case ui::AX_ROLE_MATH:
+#if defined(ATK_CHECK_VERSION)
+#if ATK_CHECK_VERSION(2, 12, 0)
+      atk_role_ = ATK_ROLE_MATH;
+#else
+      atk_role_ = ATK_ROLE_TEXT;
+#endif
+#else
+      atk_role_ = ATK_ROLE_TEXT;
+#endif
+      break;
     case ui::AX_ROLE_MENU:
       atk_role_ = ATK_ROLE_MENU;
       break;
